<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Dashboard">


    <LinearLayout
        android:id="@+id/design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/design"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="400dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/user_registration_verification"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="50dp"
        android:outlineAmbientShadowColor="@color/textSecondary"
        android:outlineSpotShadowColor="@color/textSecondary"
        android:background="@drawable/card_bg"
        app:layout_constraintTop_toTopOf="parent"
        android:windowSoftInputMode="adjustResize">



    <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/username"
           android:layout_width="match_parent"
           android:layout_height="65dp"
           android:background="@drawable/edit_bg"
           android:padding="15dp"
           android:textColor="@color/black"
           android:layout_marginTop="40dp"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           android:hint="@string/enter_your_username"
           android:textColorHint="@color/black">
       </androidx.appcompat.widget.AppCompatEditText>

       <TextView
           android:id="@+id/countryCode"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:gravity="center"
           android:text="@string/enter_mobile_number"
           android:textColor="@color/black"
           android:textSize="16sp">

       </TextView>

      <LinearLayout
          android:id="@+id/horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="40dp"
          android:layout_marginEnd="30dp"
          android:orientation="horizontal"
          android:gravity="center">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="40dp"
              android:gravity="center"
              android:text="@string/_233"
              android:layout_marginRight="10dp"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:textStyle="bold">
          </TextView>

          <EditText
              android:id="@+id/phone"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:background="@drawable/edit_bg"
              android:hint="@string/_244444444"
              android:imeOptions="actionDone"
              android:layout_marginLeft="5dp"
              android:importantForAutofill="no"
              android:inputType="number"
              android:textSize="20sp"
              android:textColor="@color/black"
              android:textStyle="bold">

          </EditText>

      </LinearLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/we_will_send_you_a_one_time_otp_on_this_mobile_number"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@+id/label">
        </TextView>


          <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/Next_btn"
              android:layout_width="match_parent"
              android:layout_height="65dp"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:background="@drawable/btn_bg"
              android:gravity="center"
              android:padding="10dp"
              android:text="@string/next"
              android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/prog_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
