<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OtpAuthentication">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/design"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:background="@color/purple_700"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/otp_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verify"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginLeft="70dp"
                android:textColor="@color/white"
                android:textSize="20dp" />


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/enter_your_verification_code"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/otp_text1">

        </androidx.appcompat.widget.AppCompatTextView>

        <TextView
            android:id="@+id/mobi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:background="@drawable/otp_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor">

            </EditText>

            <EditText
                android:id="@+id/code2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/otp_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor">

            </EditText>

            <EditText
                android:id="@+id/code3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/otp_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor">

            </EditText>

            <EditText
                android:id="@+id/code4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/otp_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor">

            </EditText>

            <EditText
                android:id="@+id/code5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/otp_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor">

            </EditText>

            <EditText
                android:id="@+id/code6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/otp_bg"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor">

            </EditText>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/couldn_t_retrieve_code">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_blue"
            android:text="@string/re_send_opt"
            android:textStyle="bold"
            android:textSize="15sp">

        </TextView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Log_btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="Verify"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        app:flow_verticalAlign="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>